adding filters for hook lists